# algorithm-machine

./: .gitignore  README.md  pyproject.toml  run_backtest.py  run_holdout.py  run_walk_forward.py  run_wfo_suite.sh  system-architecture.md
config/: default.yaml  equity_momentum.yaml  equity_pullback_swing.yaml  multi_strategy.yaml
docs/: ARCHITECTURE.md  BACKTEST_HARNESS.md  CONFIGURATION.md  DATA_PIPELINE.md  EVENT_SYSTEM.md  EXECUTION_ENGINE.md  PORTFOLIO_STATE.md  RISK_ENGINE.md  STRATEGY_INTERFACE.md
engine/backtest/: __init__.py  calendar.py  metrics.py  plot.py  runner.py  walk_forward.py
engine/config/: __init__.py  schema.py
engine/data/: __init__.py  cache.py  normalizer.py  universe.py
engine/data/fetchers/: __init__.py  base.py  yfinance.py
engine/events/: __init__.py  bus.py  logger.py  types.py
engine/execution/: __init__.py  base.py  order.py  paper_broker.py
engine/portfolio/: __init__.py  position.py  state.py
engine/risk/: __init__.py  gatekeeper.py
engine/risk/rules/: __init__.py  base.py  builtin.py
engine/strategy/: __init__.py  base.py
strategies/: equity_momentum.py  equity_pullback_swing.py  etf_mean_reversion.py  etf_momentum.py  sma_crossover.py
tests/: test_backtest_calendar.py  test_backtest_integration.py  test_data_pipeline_config.py  test_equity_momentum_signal.py  test_etf_mean_reversion.py  test_etf_strategies_partial_fill.py  test_paper_broker.py  test_portfolio_state.py  test_risk_rules_properties.py  test_sma_crossover.py  test_walk_forward.py
