[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algorithm-machine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "yfinance>=0.2",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "hypothesis>=6.0",
    "matplotlib>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["engine", "strategies"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff.lint]
select = ["E", "F", "I"]
